--- a/src/components/AddRequestComponent2/style.css
+++ b/src/components/AddRequestComponent2/style.css
@@ -13,7 +13,6 @@
     border: 1px solid #cccccc;
     border-radius: 5px;
     padding: 0% 1% 1% 1%;
-    display: flex;
 }
 .multi-select-card{
     margin: 1% 1% 0% 0%
@@ -25,10 +24,10 @@
 }
 
 .form-grid{
-    margin:2% 2% 2% 2%;
+    margin:1% 2% 3% 2%;
 }
 
-.addrequest-wrapper input{
+.addrequest-wrapper input,.addrequest-wrapper select{
     background-color: white;
 }
 
@@ -40,6 +39,9 @@
 }
 .checklist-name{
     margin: 1%;
+    float: left;
+    margin-right: 5%;
+    width: 6%;
 }
 .footer-button-group{
     background-color: white;
@@ -50,4 +52,10 @@
 .remarks {
     margin: 0% 2% 0% 2%;
 }
+.ac-text2 label{
+    visibility: hidden;
+}
 
+.support-text{
+    margin: 1em 1em 0em 1em;
+}
